--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 .storybook",
     "build-storybook": "build-storybook"
   },
   "private": true,
@@ -46,10 +46,12 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
-    "@storybook/angular": "^3.4.10",
-    "@storybook/addon-notes": "^3.4.10",
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-links": "^3.4.10",
-    "@storybook/addons": "^3.4.10"
+    "@storybook/angular": "^4.0.0-alpha.21",
+    "@storybook/addon-notes": "^4.0.0-alpha.21",
+    "@storybook/addon-actions": "^4.0.0-alpha.21",
+    "@storybook/addon-links": "^4.0.0-alpha.21",
+    "@storybook/addons": "^4.0.0-alpha.21",
+    "@babel/core": "^7.0.1",
+    "babel-loader": "^8.0.2"
   }
 }
